CM2-2797/fix line break in error detail recommended action text (#1453)

--- a/energylink-connect2-app/src/pages/ErrorDetailScreen/ErrorDetail.scss
+++ b/energylink-connect2-app/src/pages/ErrorDetailScreen/ErrorDetail.scss
@@ -40,6 +40,7 @@
 
     p {
       padding-top: 0.6em;
+      white-space: pre-line;
     }
   }
 }
